// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using asec.Models;

#nullable disable

namespace asec.Migrations
{
    [DbContext(typeof(AsecDBContext))]
    partial class AsecDBContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "10.0.7");

            modelBuilder.Entity("ConverterEmulationEnvironment", b =>
                {
                    b.Property<Guid>("ConvertersId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("EmulationEnvironmentId")
                        .HasColumnType("TEXT");

                    b.HasKey("ConvertersId", "EmulationEnvironmentId");

                    b.HasIndex("EmulationEnvironmentId");

                    b.ToTable("ConverterEmulationEnvironment");
                });

            modelBuilder.Entity("DigitalObjectWorkVersion", b =>
                {
                    b.Property<Guid>("DigitalObjectsId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("WorkVersionsId")
                        .HasColumnType("TEXT");

                    b.HasKey("DigitalObjectsId", "WorkVersionsId");

                    b.HasIndex("WorkVersionsId");

                    b.ToTable("DigitalObjectWorkVersion");
                });

            modelBuilder.Entity("EmulatorPlatform", b =>
                {
                    b.Property<Guid>("EmulatorId")
                        .HasColumnType("TEXT");

                    b.Property<string>("PlatformsName")
                        .HasColumnType("TEXT");

                    b.HasKey("EmulatorId", "PlatformsName");

                    b.HasIndex("PlatformsName");

                    b.ToTable("EmulatorPlatform");
                });

            modelBuilder.Entity("ParatextWorkVersion", b =>
                {
                    b.Property<Guid>("ParatextsId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("WorkVersionsId")
                        .HasColumnType("TEXT");

                    b.HasKey("ParatextsId", "WorkVersionsId");

                    b.HasIndex("WorkVersionsId");

                    b.ToTable("ParatextWorkVersion");
                });

            modelBuilder.Entity("PhysicalObjectWorkVersion", b =>
                {
                    b.Property<Guid>("PhysicalObjectsId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("WorkVersionsId")
                        .HasColumnType("TEXT");

                    b.HasKey("PhysicalObjectsId", "WorkVersionsId");

                    b.HasIndex("WorkVersionsId");

                    b.ToTable("PhysicalObjectWorkVersion");
                });

            modelBuilder.Entity("asec.Models.Archive.DigitalObject", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("DigitalObjectType")
                        .HasColumnType("TEXT");

                    b.Property<string>("Discriminator")
                        .IsRequired()
                        .HasMaxLength(13)
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("ExportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("FedoraUrl")
                        .HasColumnType("TEXT");

                    b.Property<string>("FileName")
                        .HasColumnType("TEXT");

                    b.Property<long>("FileSize")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Format")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("GamePackageId")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("ImportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("InternalNote")
                        .HasColumnType("TEXT");

                    b.Property<string>("Label")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("PhysicalObjectId")
                        .HasColumnType("TEXT");

                    b.Property<string>("Quality")
                        .HasColumnType("TEXT");

                    b.Property<int>("RemoteId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("WebsiteUrl")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("GamePackageId");

                    b.HasIndex("PhysicalObjectId");

                    b.ToTable("DigitalObjects");

                    b.HasDiscriminator<string>("Discriminator").HasValue("DigitalObject");

                    b.UseTphMappingStrategy();
                });

            modelBuilder.Entity("asec.Models.Archive.Paratext", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<bool>("CanExport")
                        .HasColumnType("INTEGER");

                    b.Property<DateOnly>("Date")
                        .HasColumnType("TEXT");

                    b.Property<bool>("Deleted")
                        .HasColumnType("INTEGER");

                    b.Property<Guid?>("DigitalObjectId")
                        .HasColumnType("TEXT");

                    b.Property<uint>("EmissionSize")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("ExportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("FilledOutBy")
                        .HasColumnType("TEXT");

                    b.Property<string>("IdentificationNumber")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("ImportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("InternalNote")
                        .HasColumnType("TEXT");

                    b.Property<string>("Label")
                        .HasColumnType("TEXT");

                    b.Property<string>("Language")
                        .HasColumnType("TEXT");

                    b.Property<string>("ParatextType")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("PhysicalObjectId")
                        .HasColumnType("TEXT");

                    b.Property<int>("RemoteId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("WebsiteUrl")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("DigitalObjectId");

                    b.HasIndex("PhysicalObjectId");

                    b.ToTable("Paratexts");
                });

            modelBuilder.Entity("asec.Models.Archive.PhysicalObject", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Condition")
                        .HasColumnType("TEXT");

                    b.Property<string>("CountryOfOrigin")
                        .HasColumnType("TEXT");

                    b.Property<DateOnly>("Date")
                        .HasColumnType("TEXT");

                    b.Property<bool>("Deleted")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Description")
                        .HasColumnType("TEXT");

                    b.Property<string>("EAN")
                        .HasColumnType("TEXT");

                    b.Property<string>("FilledOutBy")
                        .HasColumnType("TEXT");

                    b.Property<string>("ISBN")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("ImportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("InternalNote")
                        .HasColumnType("TEXT");

                    b.Property<string>("Label")
                        .HasColumnType("TEXT");

                    b.Property<string>("Location")
                        .HasColumnType("TEXT");

                    b.Property<string>("Owner")
                        .HasColumnType("TEXT");

                    b.Property<string>("PhysicalObjectType")
                        .HasColumnType("TEXT");

                    b.Property<int>("RemoteId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Size")
                        .HasColumnType("TEXT");

                    b.Property<string>("WebsiteUrl")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("PhysicalObjects");
                });

            modelBuilder.Entity("asec.Models.Archive.Work", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("CuratorialDescription")
                        .HasColumnType("TEXT");

                    b.Property<bool>("Deleted")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("ImportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("InternalNote")
                        .HasColumnType("TEXT");

                    b.Property<string>("Label")
                        .HasColumnType("TEXT");

                    b.Property<int>("RemoteId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("TypeOfWork")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("RemoteId");

                    b.ToTable("Works");
                });

            modelBuilder.Entity("asec.Models.Archive.WorkVersion", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("CopyProtection")
                        .HasColumnType("TEXT");

                    b.Property<string>("CuratorialDescription")
                        .HasColumnType("TEXT");

                    b.Property<bool>("Deleted")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Description")
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("ImportedAt")
                        .HasColumnType("TEXT");

                    b.Property<string>("InternalNote")
                        .HasColumnType("TEXT");

                    b.Property<string>("Label")
                        .HasColumnType("TEXT");

                    b.Property<int>("RemoteId")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Subtitle")
                        .HasColumnType("TEXT");

                    b.Property<string>("System")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("WorkId")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("RemoteId");

                    b.HasIndex("WorkId");

                    b.ToTable("WorkVersions");
                });

            modelBuilder.Entity("asec.Models.Digitalization.DigitalizationTool", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Environment")
                        .HasColumnType("TEXT");

                    b.Property<string>("Hash")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.Property<string>("PhysicalMedia")
                        .HasColumnType("TEXT");

                    b.Property<string>("Version")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("Hash");

                    b.ToTable("DigitalizationTools");
                });

            modelBuilder.Entity("asec.Models.Emulation.Converter", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Configuration")
                        .HasColumnType("TEXT");

                    b.Property<string>("Environment")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.Property<string>("SupportedArtefactTypes")
                        .HasColumnType("TEXT");

                    b.Property<string>("Version")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Converters");
                });

            modelBuilder.Entity("asec.Models.Emulation.EmulationEnvironment", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("EaasId")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("EmulatorId")
                        .HasColumnType("TEXT");

                    b.Property<string>("EmulatorVersion")
                        .HasColumnType("TEXT");

                    b.Property<bool>("InternetConnected")
                        .HasColumnType("INTEGER");

                    b.HasKey("Id");

                    b.HasIndex("EmulatorId");

                    b.ToTable("Environments");
                });

            modelBuilder.Entity("asec.Models.Emulation.Emulator", b =>
                {
                    b.Property<Guid>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("TEXT");

                    b.Property<string>("Homepage")
                        .HasColumnType("TEXT");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Emulators");
                });

            modelBuilder.Entity("asec.Models.Emulation.Platform", b =>
                {
                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.Property<string>("MediaTypes")
                        .HasColumnType("TEXT");

                    b.HasKey("Name");

                    b.ToTable("Platforms");
                });

            modelBuilder.Entity("asec.Models.Digitalization.Artefact", b =>
                {
                    b.HasBaseType("asec.Models.Archive.DigitalObject");

                    b.Property<DateTime>("ArchivationDate")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("DigitalizationToolId")
                        .HasColumnType("TEXT");

                    b.Property<Guid>("ObjectId")
                        .HasColumnType("TEXT");

                    b.Property<int>("PhysicalMediaType")
                        .HasColumnType("INTEGER");

                    b.Property<int>("Type")
                        .HasColumnType("INTEGER");

                    b.HasIndex("DigitalizationToolId");

                    b.HasDiscriminator().HasValue("Artefact");
                });

            modelBuilder.Entity("asec.Models.Emulation.GamePackage", b =>
                {
                    b.HasBaseType("asec.Models.Archive.DigitalObject");

                    b.Property<DateTime>("ConversionDate")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("ConverterId")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("EnvironmentId")
                        .HasColumnType("TEXT");

                    b.Property<bool>("IsDiskImage")
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .HasColumnType("TEXT");

                    b.Property<string>("ObjectId")
                        .HasColumnType("TEXT");

                    b.Property<Guid?>("VersionId")
                        .HasColumnType("TEXT");

                    b.HasIndex("ConverterId");

                    b.HasIndex("EnvironmentId");

                    b.HasIndex("VersionId");

                    b.ToTable("DigitalObjects", t =>
                        {
                            t.Property("ObjectId")
                                .HasColumnName("GamePackage_ObjectId");
                        });

                    b.HasDiscriminator().HasValue("GamePackage");
                });

            modelBuilder.Entity("ConverterEmulationEnvironment", b =>
                {
                    b.HasOne("asec.Models.Emulation.Converter", null)
                        .WithMany()
                        .HasForeignKey("ConvertersId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("asec.Models.Emulation.EmulationEnvironment", null)
                        .WithMany()
                        .HasForeignKey("EmulationEnvironmentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("DigitalObjectWorkVersion", b =>
                {
                    b.HasOne("asec.Models.Archive.DigitalObject", null)
                        .WithMany()
                        .HasForeignKey("DigitalObjectsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("asec.Models.Archive.WorkVersion", null)
                        .WithMany()
                        .HasForeignKey("WorkVersionsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("EmulatorPlatform", b =>
                {
                    b.HasOne("asec.Models.Emulation.Emulator", null)
                        .WithMany()
                        .HasForeignKey("EmulatorId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("asec.Models.Emulation.Platform", null)
                        .WithMany()
                        .HasForeignKey("PlatformsName")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("ParatextWorkVersion", b =>
                {
                    b.HasOne("asec.Models.Archive.Paratext", null)
                        .WithMany()
                        .HasForeignKey("ParatextsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("asec.Models.Archive.WorkVersion", null)
                        .WithMany()
                        .HasForeignKey("WorkVersionsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("PhysicalObjectWorkVersion", b =>
                {
                    b.HasOne("asec.Models.Archive.PhysicalObject", null)
                        .WithMany()
                        .HasForeignKey("PhysicalObjectsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("asec.Models.Archive.WorkVersion", null)
                        .WithMany()
                        .HasForeignKey("WorkVersionsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("asec.Models.Archive.DigitalObject", b =>
                {
                    b.HasOne("asec.Models.Emulation.GamePackage", null)
                        .WithMany("IncludedDigitalObjects")
                        .HasForeignKey("GamePackageId");

                    b.HasOne("asec.Models.Archive.PhysicalObject", "PhysicalObject")
                        .WithMany("DigitalObjects")
                        .HasForeignKey("PhysicalObjectId");

                    b.Navigation("PhysicalObject");
                });

            modelBuilder.Entity("asec.Models.Archive.Paratext", b =>
                {
                    b.HasOne("asec.Models.Archive.DigitalObject", "DigitalObject")
                        .WithMany("Paratexts")
                        .HasForeignKey("DigitalObjectId");

                    b.HasOne("asec.Models.Archive.PhysicalObject", "PhysicalObject")
                        .WithMany("Paratexts")
                        .HasForeignKey("PhysicalObjectId");

                    b.Navigation("DigitalObject");

                    b.Navigation("PhysicalObject");
                });

            modelBuilder.Entity("asec.Models.Archive.WorkVersion", b =>
                {
                    b.HasOne("asec.Models.Archive.Work", "Work")
                        .WithMany("WorkVersions")
                        .HasForeignKey("WorkId");

                    b.Navigation("Work");
                });

            modelBuilder.Entity("asec.Models.Emulation.EmulationEnvironment", b =>
                {
                    b.HasOne("asec.Models.Emulation.Emulator", "Emulator")
                        .WithMany("Environments")
                        .HasForeignKey("EmulatorId");

                    b.Navigation("Emulator");
                });

            modelBuilder.Entity("asec.Models.Digitalization.Artefact", b =>
                {
                    b.HasOne("asec.Models.Digitalization.DigitalizationTool", "DigitalizationTool")
                        .WithMany()
                        .HasForeignKey("DigitalizationToolId");

                    b.Navigation("DigitalizationTool");
                });

            modelBuilder.Entity("asec.Models.Emulation.GamePackage", b =>
                {
                    b.HasOne("asec.Models.Emulation.Converter", "Converter")
                        .WithMany()
                        .HasForeignKey("ConverterId");

                    b.HasOne("asec.Models.Emulation.EmulationEnvironment", "Environment")
                        .WithMany()
                        .HasForeignKey("EnvironmentId");

                    b.HasOne("asec.Models.Archive.WorkVersion", "Version")
                        .WithMany()
                        .HasForeignKey("VersionId");

                    b.Navigation("Converter");

                    b.Navigation("Environment");

                    b.Navigation("Version");
                });

            modelBuilder.Entity("asec.Models.Archive.DigitalObject", b =>
                {
                    b.Navigation("Paratexts");
                });

            modelBuilder.Entity("asec.Models.Archive.PhysicalObject", b =>
                {
                    b.Navigation("DigitalObjects");

                    b.Navigation("Paratexts");
                });

            modelBuilder.Entity("asec.Models.Archive.Work", b =>
                {
                    b.Navigation("WorkVersions");
                });

            modelBuilder.Entity("asec.Models.Emulation.Emulator", b =>
                {
                    b.Navigation("Environments");
                });

            modelBuilder.Entity("asec.Models.Emulation.GamePackage", b =>
                {
                    b.Navigation("IncludedDigitalObjects");
                });
#pragma warning restore 612, 618
        }
    }
}
