@startuml DB

' ==============================
' Collective Access DB entities
' ==============================

entity Work {
    * Id
    Status : list
    Title : text
    Alternative-title : text
    Subheading : text
    Description : text
    Classification : list
    Year-of-publication : date
    Genre : list
    Class-Time : list
    Class-Location : list
    Note : text
}

entity Version {
    * Id
    Status : list
    Title : text
    Alternative-title : text
    Year-of-publication : date
    System : list
    System-requirements : text
    Note : text
    --
    Work : <<FK>>
}

entity Object {
    * Id
    Title : text
    Alternative-title : text
    Description : text
    Language : list
    Data-carrier-type : list
    Data-carrier-count : number
    Copy-protection : list
    Copy-protection-note : text
    EAN : text
    ISBN : text
    Internal-note : text
    Storage-location : list
    Object-status : list
    License-type : list
    --
    VersionId : <<FK>>
}

entity PersonInstitution {
    * Id
    Name : text
    Alternative-name : string
    Category : list
    Website : url
}

' ==============================
' Emulation entities
' ==============================

entity Platform {
    * Id
    Name : text

}

entity Environment {
    * Id
    Emulator-config : object
    Image : text
    Base-image : UUID
}

entity Emulator {
    * Id
    Name : text
    Version : text
    Release : date
    Base-OS : text
}

entity EmulatorVersion {
    * Id
    Version : text

}

entity Converter {
    * Id
    Source-media-type : list
    
}

' ==============================
' Recordings
' ==============================

entity VideoRecording {
    * Id
    --
    VersionId : <<FK>>
}

entity InputRecording {
    * Id
    --
    VersionId : <<FK>>
    EmulatorVersionId : <<FK>>
}

entity PlayerProfile {
    * Id
    Name : string

}

entity SaveState {
    * Id
    --
    EmulatorVersionId : <<FK>>
}

' ==============================
' Access
' ==============================

'entity User {
'    * Id
'    Username : text
'    Password : hash
'    Name : text
'    Note : text
'}

' TODO: SSO login entities

' ==============================
' Relations
' ==============================

Object }o..|| Platform
Object }o..|| Version
Object }o..|| Converter

Work ||..o{ Version
PersonInstitution }|..o{ Work

EmulatorVersion }o..|| Emulator

Emulator ||..o{ Environment
Version ||..o{ PlayerProfile

InputRecording }o..|| EmulatorVersion
InputRecording }o..|| Version

VideoRecording }o..|| Version

SaveState }o..|| EmulatorVersion

@enduml